fixed visibility issues on card carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,5 +49,6 @@ h2 {
 }
 
 .contrast-font {
-    color: darkblue;
+    background-color: gray;
+    opacity: 80%;
 }
